--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
+    "nodemailer": "^6.9.16",
     "sequelize": "^6.31.0"
   }
 }
