--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "axos": "^0.0.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
