--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "tkpmhdt_nhom4",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.7",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
@@ -18,12 +18,16 @@
     "axos": "^0.0.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.2.3",
     "nodemailer": "^6.9.16",
     "sequelize": "^6.31.0"
