--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.7.7",
     "axos": "^0.0.1",
     "bcrypt": "^5.1.0",
